stoke deisgn add

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
 
             <!-- Card no 1 -->
             <androidx.cardview.widget.CardView
+                android:id="@+id/calculateZakat"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="125dp"
