--- a/app/src/main/res/layout/activity_calculate_zakat.xml
+++ b/app/src/main/res/layout/activity_calculate_zakat.xml
@@ -44,86 +44,362 @@
             android:gravity="center"
             >
 
+            <!-- All main Mother Layout 1 -->
+          <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              >
 
-            <!-- Main Item Layout 1 -->
+              <!-- Main Item Layout 1 -->
+              <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="140dp"
+                  android:orientation="vertical"
+                  android:padding="8dp"
+                  android:background="@color/item_primary"
+                  >
+
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="start"
+                      android:text="CASH AMOUNT:"
+                      android:textStyle="bold"
+                      android:textColor="@color/text_primary"
+                      android:textSize="17sp"/>
+
+                  <!-- input cash -->
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="8dp"
+                      android:layout_weight="1"
+                      android:orientation="horizontal"
+                      android:gravity="center">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:text="CASH AMOUNT:"
+                          android:textStyle="bold"
+                          android:layout_marginTop="10dp"
+                          android:textColor="@color/text_primary"
+                          android:textSize="17sp"/>
+
+                      <EditText
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:text=""
+                          android:inputType="number"
+                          android:gravity="center"
+                          android:hint="0.00$"
+                          android:textColor="@color/text_primary"/>
+
+                  </LinearLayout>
+
+                  <!-- input bank -->
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="8dp"
+                      android:layout_weight="1"
+                      android:orientation="horizontal"
+                      android:gravity="center">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:text="BANK CASH AMOUNT:"
+                          android:layout_marginTop="10dp"
+                          android:textStyle="bold"
+                          android:textColor="@color/text_primary"
+                          android:textSize="17sp"/>
+
+                      <EditText
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:text=""
+                          android:inputType="number"
+                          android:gravity="center"
+                          android:hint="0.00$"
+                          android:textColor="@color/text_primary"/>
+
+                  </LinearLayout>
+
+
+
+              </LinearLayout>
+
+              <!-- Main Item Layout 2 -->
+              <LinearLayout
+                  android:layout_marginTop="15dp"
+                  android:layout_marginBottom="15dp"
+                  android:layout_width="match_parent"
+                  android:layout_height="140dp"
+                  android:orientation="vertical"
+                  android:padding="8dp"
+                  android:background="@color/white"
+                  >
+
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="start"
+                      android:text="AMOUNT EQUIVALENT TO GOLD:"
+                      android:textStyle="bold"
+                      android:textColor="@color/text_primary"
+                      android:textSize="17sp"/>
+
+                  <!-- input cash -->
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="8dp"
+                      android:layout_weight="1"
+                      android:orientation="horizontal"
+                      android:gravity="center">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:text="GOLD:"
+                          android:textStyle="bold"
+                          android:layout_marginTop="10dp"
+                          android:textColor="@color/text_primary"
+                          android:textSize="17sp"/>
+
+                      <EditText
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:text=""
+                          android:inputType="number"
+                          android:gravity="center"
+                          android:hint="0.00$"
+                          android:textColor="@color/text_primary"/>
+
+                  </LinearLayout>
+
+                  <!-- input bank -->
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="8dp"
+                      android:layout_weight="1"
+                      android:orientation="horizontal"
+                      android:gravity="center">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:text="SILVER:"
+                          android:layout_marginTop="10dp"
+                          android:textStyle="bold"
+                          android:textColor="@color/text_primary"
+                          android:textSize="17sp"/>
+
+                      <EditText
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:text=""
+                          android:inputType="number"
+                          android:gravity="center"
+                          android:hint="0.00$"
+                          android:textColor="@color/text_primary"/>
+
+                  </LinearLayout>
+
+
+
+              </LinearLayout>
+
+              <!-- Main Item Layout 3 -->
+              <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="140dp"
+                  android:orientation="vertical"
+                  android:padding="8dp"
+                  android:background="@color/item_primary"
+                  >
+
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="start"
+                      android:text="INVESTMENT AMOUNT:"
+                      android:textStyle="bold"
+                      android:textColor="@color/text_primary"
+                      android:textSize="17sp"/>
+
+                  <!-- input cash -->
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="8dp"
+                      android:layout_weight="1"
+                      android:orientation="horizontal"
+                      android:gravity="center">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:text="STOCK MAKET:"
+                          android:textStyle="bold"
+                          android:layout_marginTop="10dp"
+                          android:textColor="@color/text_primary"
+                          android:textSize="17sp"/>
+
+                      <EditText
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:text=""
+                          android:inputType="number"
+                          android:gravity="center"
+                          android:hint="0.00$"
+                          android:textColor="@color/text_primary"/>
+
+                  </LinearLayout>
+
+                  <!-- input bank -->
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="8dp"
+                      android:layout_weight="1"
+                      android:orientation="horizontal"
+                      android:gravity="center">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:text="OTHER MARKET:"
+                          android:layout_marginTop="10dp"
+                          android:textStyle="bold"
+                          android:textColor="@color/text_primary"
+                          android:textSize="17sp"/>
+
+                      <EditText
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:text=""
+                          android:inputType="number"
+                          android:gravity="center"
+                          android:hint="0.00$"
+                          android:textColor="@color/text_primary"/>
+
+                  </LinearLayout>
+
+
+
+              </LinearLayout>
+
+              <!-- Main Item Layout 4 -->
+              <LinearLayout
+                  android:layout_marginTop="15dp"
+                  android:layout_marginBottom="15dp"
+                  android:layout_width="match_parent"
+                  android:layout_height="140dp"
+                  android:orientation="vertical"
+                  android:padding="8dp"
+                  android:background="@color/white"
+                  >
+
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="start"
+                      android:text="AMOUNT EQUIVALENT TO GOLD:"
+                      android:textStyle="bold"
+                      android:textColor="@color/text_primary"
+                      android:textSize="17sp"/>
+
+                  <!-- input cash -->
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="8dp"
+                      android:layout_weight="1"
+                      android:orientation="horizontal"
+                      android:gravity="center">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:text="GOLD:"
+                          android:textStyle="bold"
+                          android:layout_marginTop="10dp"
+                          android:textColor="@color/text_primary"
+                          android:textSize="17sp"/>
+
+                      <EditText
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:text=""
+                          android:inputType="number"
+                          android:gravity="center"
+                          android:hint="0.00$"
+                          android:textColor="@color/text_primary"/>
+
+                  </LinearLayout>
+
+                  <!-- input bank -->
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="8dp"
+                      android:layout_weight="1"
+                      android:orientation="horizontal"
+                      android:gravity="center">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:text="SILVER:"
+                          android:layout_marginTop="10dp"
+                          android:textStyle="bold"
+                          android:textColor="@color/text_primary"
+                          android:textSize="17sp"/>
+
+                      <EditText
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:text=""
+                          android:inputType="number"
+                          android:gravity="center"
+                          android:hint="0.00$"
+                          android:textColor="@color/text_primary"/>
+
+                  </LinearLayout>
+
+
+
+              </LinearLayout>
+          </LinearLayout>
+
+            <!-- Pre next button -->
             <LinearLayout
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="25dp"
                 android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:orientation="vertical"
-                android:padding="8dp"
-                android:background="@color/item_primary"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:gravity="right"
                 >
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:text="CASH AMOUNT:"
-                    android:textStyle="bold"
-                    android:textColor="@color/text_primary"
-                    android:textSize="17sp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:text="PREV"/>
 
-                <!-- input cash -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="8dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="center">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="CASH AMOUNT:"
-                        android:textStyle="bold"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/text_primary"
-                        android:textSize="17sp"/>
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text=""
-                        android:inputType="number"
-                        android:gravity="center"
-                        android:hint="0.00$"
-                        android:textColor="@color/text_primary"/>
-
-                </LinearLayout>
-
-                <!-- input bank -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="8dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="center">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="BANK CASH AMOUNT:"
-                        android:layout_marginTop="10dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/text_primary"
-                        android:textSize="17sp"/>
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text=""
-                        android:inputType="number"
-                        android:gravity="center"
-                        android:hint="0.00$"
-                        android:textColor="@color/text_primary"/>
-
-                </LinearLayout>
-
+                <Button
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:text="NEXT"/>
 
 
             </LinearLayout>
+
 
         </LinearLayout>
 
